fixed spacing issue on header links
changed margin to zero instead of default for better flow

--- a/FED/index_style.css
+++ b/FED/index_style.css
@@ -49,6 +49,7 @@ header .title-wrap div h1 {
 .links {
   width: 100%;
   padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
